<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/PageStyle"
    tools:context=".activities.MainActivity">

    <TextView
        android:id="@+id/page_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/PageTitle"
        android:text="@string/main_menu_title" />

    <TextView
        style="@style/TextStyle"
        android:id="@+id/greeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_menu_subtext" />

    <Button
        style="@style/GenericButton"
        android:id="@+id/button_configure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/configure_decision" />

    <Button
        style="@style/GenericButton"
        android:id="@+id/button_vote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vote_on_decision" />

    <Button
        style="@style/GenericButton"
        android:id="@+id/button_view_results"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_results" />

    <Button
        style="@style/GenericButton"
        android:id="@+id/button_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_all_data" />

</LinearLayout>

