<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/PageStyle"
    tools:context="com.lydiaralph.decisiontracker.activities.ConfigureNewDecisionActivity">

    <TextView
        android:id="@+id/page_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/PageTitle"
        android:text="@string/configure_decision" />

    <TextView
        style="@style/SubtitleTextStyle"
        android:id="@+id/prompt_decision_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/ask_this_question" />

    <EditText
        android:id="@+id/input_decision_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:inputType="textNoSuggestions"
        style="@style/TextStyle"
        android:hint="@string/ask_this_question_hint" />

    <EditText
        android:id="@+id/input_option_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textNoSuggestions"
        android:layout_margin="6dp"
        style="@style/TextStyle"
        android:hint="@string/option_1_question_hint" />

    <EditText
        android:id="@+id/input_option_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textNoSuggestions"
        android:layout_margin="6dp"
        style="@style/TextStyle"
        android:hint="@string/option_2_question_hint" />

    <LinearLayout
        android:id="@+id/add_options_here"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" />

    <TextView
        style="@style/TextStyle"
        android:id="@+id/prompt_tracker_period"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_gravity="left"
        android:text="@string/prompt_tracker_period" />

    <DatePicker
        android:id="@+id/datePicker1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:datePickerMode="spinner"
        android:calendarViewShown="false"/>

    <Button
        style="@style/GenericButton"
        android:id="@+id/button_submit_new_decision"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save" />

    <Button
        style="@style/GenericButton"
        android:id="@+id/button_return_to_main_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/return_to_main_menu" />

</LinearLayout>
