<!-- Copyright 2017 Google Inc.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License. -->

<resources>
    <!-- Everywhere -->
    <string name="app_name">You Decide</string>
    <string name="success_announcement">Success!</string>
    <string name="placeholder">placeholder</string>

    <!-- Main Activity -->
    <string name="home_set_up_configuration">Configure questions</string>
    <string name="home_how_to_use">How to use</string>
    <string name="home_answer_question">Answer questions</string>
    <string name="view_results">View results</string>

    <!--View single decision-->
    <string name="your_decision">Your decision</string>
    <string name="you_decided">Results are in!</string>

    <!-- Ask new question -->
    <string name="configure_decision">Set up your decision</string>
    <string name="ask_this_question">What decision are you making?</string>
    <string name="ask_this_question_hint">What should I do next year?</string>
    <string name="options_text">What are the options?</string>
    <string name="option_1_question_hint">Option 1: go to art school</string>
    <string name="option_2_question_hint">Option 2: study economics degree</string>
    <string name="option_3_question_hint">Option 3: become a hairdresser</string>
    <string name="new_question_duration">For how long do you want to track your decision?</string>
    <string name="new_question_explanation">You can\'t view the results until time is up,
        but a longer decision will give you more accurate results</string>
    <string name="save">Save</string>

    <!-- Confirmation new question-->
    <string name="display_new_question">I\'ll ask you:</string>
    <string name="display_options">These are the options:</string>
    <string name="display_timescale">Until </string>

    <!-- View results -->
    <string name="results_decision_intro">Here\'s the decision you made for: </string>
    <string name="results_decision_statement">You decided to: </string>
    <string name="results_second_best">The next closest option was: </string>

    <!-- Results not ready -->
    <string name="results_not_ready">Dang! Results are not ready until the decision tracking period is over, on </string>
    <string name="results_finish">If you can\'t wait to know the answer, you can choose to finish early</string>

    <!-- Confirm -->
    <string name="are_you_sure">Are you sure you want to stop tracking your decision?</string>

    <!-- Ask question -->
    <string name="answer_intro">So. How are we feeling today? </string>

    <!-- Question answered-->
    <string name="answer_submitted">Today you decided: </string>
    <string name="button_change_answer">Change answer</string>
    <string name="button_finish">Finish</string>

    <!-- Notification: answer question -->
    <string name="answer_question_notification_title_template">Answer question: %1$s</string>

    <!-- TODO: remove this placeholder text -->
    <string name="answer_question_notification_placeholder_text_template">You said %1$s and lorem
        ipsum dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit
        vel semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis.
        Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper
        ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis
        viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec
        tortor.
    </string>

    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">No decision text was entered.</string>

    <string name="empty_option_not_saved">No option was voted for. Returning to view decisions... </string>
    <string name="successful_decision_save">New decision was successfully saved in the database. \n\nReturning to main menu...</string>
    <string name="successful_vote_save">Vote was successfully saved in the database. \n\nReturning to main menu...</string>

    <string name="bye">Bye!</string>
    <string name="main_menu_subtext">Be decisive, track your votes</string>
    <string name="return_to_main_menu">Return to main menu</string>
    <string name="page_title">Placeholder page title</string>
    <string name="main_menu_title">You decide</string>
    <string name="configure_new_decision">Configure new decision</string>
    <string name="prompt_tracker_period">Track this decision until...</string>
    <string name="days">days</string>
    <string name="weeks">weeks</string>
    <string name="months">months</string>
    <string name="no_options_placeholder">No options configured for this decision</string>
    <string name="no_dates_placeholder">No dates configured for this decision</string>
    <string name="vote_on_decision">Vote on decision</string>
    <string name="decision_question_hint">What shall I do next year?</string>
    <string name="what_is_your_decision_today">What is your decision today?</string>
    <string name="no_vote_today">No vote today</string>
    <string name="configure_at_least_two_options">Must configure at least two options</string>
    <string name="end_date_should_be_after_today">Please pick an end date after today</string>
    <string name="dash">-</string>
    <string name="no_votes_for_this_decision">No votes recorded for any options</string>
    <string name="decision_has_not_expired_yet">Decision has not expired yet</string>
    <string name="stop_tracking_decision">Stop tracking decision</string>
    <string name="stop_tracking_decision_explanation">This decision is still actively being tracked. Results are not available to view until you are no longer tracking the decision. Stop tracking early?</string>
    <string name="cancel">Cancel</string>
    <string name="stop_tracking_decision_question">Stop tracking decision?</string>
    <string name="how_do_you_feel_today">How do you feel today?</string>
    <string name="no_moods_have_been_configured">No moods have been configured</string>
    <string name="choose_your_chart">Choose your chart...</string>

    <string name="delete_all_data">Delete all data</string>
    <string name="delete_all_data_please_confirm">Do you really want to delete all data?</string>
    <string name="delete_all_data_explanation">This action will delete all data from the database. The data cannot be recovered.</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="time_remaining">Time remaining</string>

</resources>
